Mon Aug 21 16:55:57 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.3.0

	* Add release note to NEWS

Mon Aug 21 16:18:00 BST 2000 Olly Betts

	* Added a few items to TODO.

Mon Aug 21 15:28:00 BST 2000 Olly Betts

	* WARNING: Incompatible changes to API!

	* om_queryop -> OmQuery::op, OM_MOP_* -> OmQuery::OP_*

Mon Aug 21 15:03:00 BST 2000 Olly Betts

	* Overhauled TODO list and added difficulty column.

Mon Aug 21 14:12:00 BST 2000 Olly Betts

	* Make apitest actually run implicitendsession test.

Mon Aug 21 13:52:34 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Update html versions of simpleexample code, to reflect new API.

	* Add quartz_modifications.cc so that quartz db will link.

Mon Aug 21 13:16:00 BST 2000 Olly Betts

	* Added test that sessions get ended correctly if class is destroyed
	  without end_session() being explicitly called (test only works in a
	  debug build).

	* MultiMatch::match() -> MultiMatch::get_mset()

Mon Aug 21 12:44:32 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* using_stemmers.html updated, to use void * rather than struct
	  <foo> *, and to make the example code compile and work correctly.

Mon Aug 21 12:13:00 BST 2000 Olly Betts

	* Removed lingering traces of get_max_weight().

	* Pruned TODO.

Mon Aug 21 11:57:00 BST 2000 Olly Betts

	* OmDocumentTerm::add_posting now first checks for the case where it
	  can simply append the new positional info (since positions are
	  usually added in increasing order)

Mon Aug 21 11:30:00 BST 2000 Olly Betts

	* LocalMatch::get_max_weight() isn't externally visible, so removed it
	  entirely

Sun Aug 20 18:09:00 BST 2000 Olly Betts

	* Corrected minor typos, etc in documentation.

Sun Aug 20 17:35:00 BST 2000 Olly Betts

	* All externally visibile references to "net"/"network" backend now
	  call it "remote".

Sun Aug 20 17:12:00 BST 2000 Olly Betts
