@@ -86,9 +86,6 @@ M|5| |Documentation| Ensure that API documentation covers entirety of
 M|5| |Documentation| Document backend API (database, postlist,
  | | |             | termlist, document, etc) in same way as enquire API.
 -+-+-+-------------+-----------------------------------------------------------
-M|3| |Positional   | Pass within-query-frequency and query length
- | | |             | information to matcher (and use it)
--+-+-+-------------+-----------------------------------------------------------
 M|3| |Positional   | Implement get_position_list() method on operators
  | | |             | so that (A OR B) NEAR (C AND D) works.
 -+-+-+-------------+-----------------------------------------------------------
