@@ -117,10 +117,12 @@ class LocalMatch : public SingleMatch
 				om_termcount window);
 
 	/// Open a postlist
-	PostList * mk_postlist(const om_termname & tname);
+	PostList * mk_postlist(const om_termname & tname,
+			       om_doclength querysize, om_termcount wqf);
 
 	/// Make a weight
-	IRWeight * mk_weight(om_doclength querysize_, om_termname tname_);
+	IRWeight * mk_weight(om_doclength querysize_, om_termcount wqf_,
+			     om_termname tname_);
 
 	/// Internal method to perform the collapse operation
 	bool perform_collapse(std::vector<OmMSetItem> &mset,
