@@ -1,3 +1,8 @@
+Mon Aug 21 17:13:00 BST 2000 Olly Betts
+
+	* Now use within query frequency and query length information in
+	  match.
+
 Mon Aug 21 16:55:57 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Declare this to be version 0.3.0
